3/product-level-deployment/custom-scripting-with-kustomize-and-oc-apply/nonDISdeployConfig/xyz/dev1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xyz
  namespace: dev1-digital
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xyz
  template:
    metadata:
      labels:
        app: xyz
    spec:
      containers:
      - name: hello-openshift
        image: openshift/hello-openshift:latest
        ports:
        - containerPort: 8080
